exports[`EditPanelItem snapshots > should match attribute item snapshot 1`] = `
{
  "itemValues": [
    [
      "type",
      "checkbox"
    ]
  ],
  "field": {
    "data": {
      "attrs": {}
    }
  },
  "itemKey": "attrs.type",
  "panelName": "attrs",
  "isDisabled": null,
  "isHidden": null,
  "isLocked": null,
  "itemFieldGroups": [],
  "dom": {}
}
`;

exports[`EditPanelItem snapshots > should match option snapshot 1`] = `
{
  "itemValues": [
    [
      "checked",
      false
    ],
    [
      "label",
      "Checkbox 1"
    ],
    [
      "value",
      "checkbox-1"
    ]
  ],
  "field": {
    "data": {
      "attrs": {}
    }
  },
  "itemKey": "options.0",
  "itemIndex": 0,
  "panelName": "options",
  "isDisabled": null,
  "isHidden": null,
  "isLocked": null,
  "itemFieldGroups": [],
  "dom": {}
}
`;
